--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,8 +24,7 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
@@ -36,6 +35,91 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <header>
+    <div class="content-wrapper">
+      <div>
+        <img src="../img/logo.png" alt="unplugged logo"></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" rel="noopener">FAQ</a>
+          </li>
+        </ul>
+        <ul>
+          <li><a href="about/index.html" rel="noopener">About</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+</header>
+
+  <section>
+    <div class="content-wrapper">
+      <h2>Our Mission - we want to make you the team you always wanted to be.
+
+      </h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+
+      </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+
+      </p>
+    </div>
+  </section>
+
+  <map>
+    <div class="content-wrapper">
+
+    </div>
+  </map>
+  <section>
+    <div class="content-wrapper">
+      <h2>Contact us, because you all need this.
+
+      </h2>
+      <h4>General Information
+
+      </h4>
+      <address>333 Main St, Lake Geneva, WI 53147 <br>
+        555-555-5555 <br>
+        hello@unplugged.com
+        </address>
+      <h4>Chat with a Facilitator
+
+      </h4>
+      <address>555-555-5556 <br>
+        facilitator@unplugged.com
+        </address>
+
+    </div>
+
+  </section>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>555-555-5555 <br>
+          hello@unplugged.com
+          </address>
+  
+      </div>
+    <div class="social-media">
+      <h4>Social</h4>
+      <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+      <p><a href="https://x.com/" target="_blank">X</a></p>
+      <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+  
+    </div>
+    <div class="copyright">
+      <p>Copyright 2025 | Unplugged</p>
+  
+    </div>
+  
+    </div>
+  
+  </footer>
 </body>
 
 </html>
