--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,8 +24,7 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
@@ -36,6 +35,71 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <header>
+    <div class="content-wrapper">
+      <div>
+        <img src="../img/logo.png" alt="unplugged logo"></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" rel="noopener">FAQ</a>
+          </li>
+        </ul>
+        <ul>
+          <li><a href="about/index.html" rel="noopener">About</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+</header>
+  <main>
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions
+      </h2>
+      <h4>How do I get to the Unplugged retreat?        
+      </h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
+      </p>
+      <h4>What kind of team is right for the Unplugged retreat?        
+      </h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
+      </p>
+      <h4>What size teams can you accommodate?        
+      </h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
+      </p>
+      <h4>Is there really no wifi available?        
+      </h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
+      </p>
+    </div>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>555-555-5555 <br>
+          hello@unplugged.com
+          </address>
+  
+      </div>
+    <div class="social-media">
+      <h4>Social</h4>
+      <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+      <p><a href="https://x.com/" target="_blank">X</a></p>
+      <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+  
+    </div>
+    <div class="copyright">
+      <p>Copyright 2025 | Unplugged</p>
+  
+    </div>
+  
+    </div>
+  
+  </footer>
 </body>
 
 </html>
