--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -36,6 +36,92 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+<header>
+    <div class="content-wrapper">
+      <div>
+        <img src="./img/logo.png" alt="unplugged logo"></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" rel="noopener">FAQ</a>
+          </li>
+        </ul>
+        <ul>
+          <li><a href="about/index.html" rel="noopener">About</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+</header>
+
+<main>
+    <div class="content-wrapper">
+      <section>
+        <img src="./img/retreat.jpg" alt="Lady standing on a bridge"></a>
+        <h1>Retreat from the desk, return refreshed.
+        </h1>
+
+      </section>
+
+      <aside>
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h3>Find out more</h3>
+        <div class="signup-form">
+          <input type="text" name="name" value="name@email.com">
+          <input type="button" value="Download Itinerary">
+
+          </div>
+      </aside>
+    
+      <div class="features">
+        <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+        <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+        <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+        <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        <p>Dedicated computer room for times that you must wifi.</p>
+
+      </div>
+      <div class="reviews">
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <img src="./img/retreat-lacrue.jpg" alt="Happy group of ladies"></div></a>
+        <h3>LaCrue Bottling Co. <br>October 2018</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+
+      </div>
+    </div>
+
+</main>
+
+<footer>
+  <div class="content-wrapper">
+    <div class="contact">
+      <h4>Contact</h4>
+      <address>555-555-5555 <br>
+        hello@unplugged.com
+        </address>
+
+    </div>
+  <div class="social-media">
+    <h4>Social</h4>
+    <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+    <p><a href="https://x.com/" target="_blank">X</a></p>
+    <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+
+  </div>
+  <div class="copyright">
+    <p>Copyright 2025 | Unplugged</p>
+
+  </div>
+
+  </div>
+
+</footer>
+
 </body>
 
 </html>
