Added content to homepage

--- a/faq/index.html
+++ b/faq/index.html
@@ -38,8 +38,11 @@
 
   <header>
     <div class="content-wrapper">
-      <div>
-        <img src="../img/logo.png" alt="unplugged logo"></a>
+    
+        <img src="./img/logo.png" alt="unplugged logo"></a>
+      
+      <div class="header-divider">
+
       </div>
       <nav>
         <ul>
@@ -52,7 +55,7 @@
         </ul>
       </nav>
     </div>
-</header>
+  </header>
   <main>
     <div class="content-wrapper">
       <h2>Frequently Asked Questions
@@ -77,28 +80,33 @@
   </main>
 
   <footer>
+
     <div class="content-wrapper">
-      <div class="contact">
-        <h4>Contact</h4>
-        <address>555-555-5555 <br>
-          hello@unplugged.com
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>555-555-5555 <br>
+            hello@unplugged.com
           </address>
-  
+
+        </div>
       </div>
-    <div class="social-media">
-      <h4>Social</h4>
-      <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
-      <p><a href="https://x.com/" target="_blank">X</a></p>
-      <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
-  
+      <div class="social">
+        <h4>Social</h4>
+      </div>
+      <div class="social-icons">
+        <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+        <p><a href="https://x.com/" target="_blank">X</a></p>
+        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+
+      </div>
+      <div class="copyright">
+        <p>Copyright 2025 | Unplugged</p>
+
+      </div>
+
     </div>
-    <div class="copyright">
-      <p>Copyright 2025 | Unplugged</p>
-  
-    </div>
-  
-    </div>
-  
+
   </footer>
 </body>
 
