Added content to about page

--- a/about/index.html
+++ b/about/index.html
@@ -46,19 +46,20 @@
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" rel="noopener">FAQ</a>
+          <li><a href="../faq/index.html" rel="noopener">FAQ</a>
           </li>
         </ul>
         <ul>
-          <li><a href="about/index.html" rel="noopener">About</a>
+          <li><a href="#" rel="noopener">About</a>
           </li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <section>
+  <section class="mission">
     <div class="content-wrapper">
+      <div class="mission-content">
       <h2>Our Mission - we want to make you the team you always wanted to be.
 
       </h2>
@@ -68,33 +69,43 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
 
       </p>
+      </div>
     </div>
   </section>
 
-  <map>
+  <section class="map">
     <div class="content-wrapper">
+      <figure>
+
+      </figure>
 
     </div>
-  </map>
-  <section>
+  </section>
+  <section class="contact-section">
     <div class="content-wrapper">
       <h2>Contact us, because you all need this.
-
       </h2>
+    
+      <div class="contact-content">
+        <div>
       <h4>General Information
 
       </h4>
+      
       <address>333 Main St, Lake Geneva, WI 53147 <br>
         555-555-5555 <br>
         hello@unplugged.com
         </address>
+        </div>
+        <div>
       <h4>Chat with a Facilitator
 
       </h4>
       <address>555-555-5556 <br>
         facilitator@unplugged.com
         </address>
-
+        </div>
+    </div>
     </div>
 
   </section>
