--- a/faq/index.html
+++ b/faq/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
@@ -38,45 +38,59 @@
 
   <header>
     <div class="content-wrapper">
-    
-        <img src="./img/logo.png" alt="unplugged logo"></a>
-      
+
+      <img src="./img/logo.png" alt="unplugged logo">
+
       <div class="header-divider">
 
       </div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" rel="noopener">FAQ</a>
+          <li><a href="#" rel="noopener">FAQ</a>
           </li>
         </ul>
         <ul>
-          <li><a href="about/index.html" rel="noopener">About</a>
+          <li><a href="../about/index.html" rel="noopener">About</a>
           </li>
         </ul>
       </nav>
     </div>
   </header>
   <main>
-    <div class="content-wrapper">
-      <h2>Frequently Asked Questions
-      </h2>
-      <h4>How do I get to the Unplugged retreat?        
-      </h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
-      </p>
-      <h4>What kind of team is right for the Unplugged retreat?        
-      </h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
-      </p>
-      <h4>What size teams can you accommodate?        
-      </h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
-      </p>
-      <h4>Is there really no wifi available?        
-      </h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.        
-      </p>
-    </div>
+    <section class="faq">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions
+        </h2>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?
+          </h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>What kind of team is right for the Unplugged retreat?
+          </h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>What size teams can you accommodate?
+          </h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>Is there really no wifi available?
+          </h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
