--- a/faq/index.html
+++ b/faq/index.html
@@ -25,21 +25,10 @@
 <body>
 
 
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-
   <header>
     <div class="content-wrapper">
 
-      <img src="./img/logo.png" alt="unplugged logo">
+      <img src="../img/logo.png" alt="unplugged logo">
 
       <div class="header-divider">
 
@@ -58,7 +47,7 @@
   </header>
   <main>
     <section class="faq">
-      <div class="content-wrapper">
+      <div class="content-wrapper"> 
         <h2>Frequently Asked Questions
         </h2>
         <div class="faq-content">
@@ -125,3 +114,14 @@
 </body>
 
 </html>
+
+<script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="../js/plugins.js"></script>
+<script src="../js/main.js"></script>
+
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+  window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+  ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
