--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,8 @@
   <header>
     <div class="content-wrapper">
 
-      <img src="../img/logo.png" alt="unplugged logo">
+      <p>logo</p>
+      <!--<img src="../img/logo.png" alt="unplugged logo">-->
 
       <div class="header-divider">
 
@@ -43,14 +44,16 @@
         </ul>
       </nav>
     </div>
+    
   </header>
 
   <section class="mission">
     <div class="content-wrapper">
-      <div class="mission-content">
-        <h2>Our Mission - we want to make you the team you always wanted to be.
+      <h2>Our Mission - we want to make you the team you always wanted to be.
 
-        </h2>
+      </h2>
+      <div class="mission-content">
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
           facilisis.
@@ -74,10 +77,11 @@
     </div>
   </section>
   <section class="contact-section">
+
     <div class="content-wrapper">
       <h2>Contact us, because you all need this.
       </h2>
-
+      
       <div class="contact-content">
         <div>
           <h4>General Information
@@ -118,17 +122,16 @@
         <h4>Social</h4>
       </div>
       <div class="social-icons">
-        <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+        <!--<p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
         <p><a href="https://x.com/" target="_blank">X</a></p>
-        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>-->
 
+      </div>
       </div>
       <div class="copyright">
         <p>Copyright 2025 | Unplugged</p>
 
       </div>
-
-    </div>
 
   </footer>
 </body>
