--- a/faq/index.html
+++ b/faq/index.html
@@ -27,8 +27,8 @@
 
   <header>
     <div class="content-wrapper">
-
-      <img src="../img/logo.png" alt="unplugged logo">
+      <p>logo</p>
+      <!--<img src="../img/logo.png" alt="unplugged logo">-->
 
       <div class="header-divider">
 
@@ -47,9 +47,12 @@
   </header>
   <main>
     <section class="faq">
+
       <div class="content-wrapper"> 
-        <h2>Frequently Asked Questions
+        <h2> Frequently Asked Questions
+          
         </h2>
+
         <div class="faq-content">
           <h4>How do I get to the Unplugged retreat?
           </h4>
@@ -98,17 +101,16 @@
         <h4>Social</h4>
       </div>
       <div class="social-icons">
-        <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+        <!--<p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
         <p><a href="https://x.com/" target="_blank">X</a></p>
-        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>-->
 
+      </div>
       </div>
       <div class="copyright">
         <p>Copyright 2025 | Unplugged</p>
 
       </div>
-
-    </div>
 
   </footer>
 </body>
