--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <header>
     <div class="content-wrapper">
     
-        <img src="./img/logo.png" alt="unplugged logo">
+      <p>logo</p>
+       <!--img src="./img/logo.png" alt="unplugged logo">-->
       
       <div class="header-divider">
 
@@ -51,7 +52,7 @@
     <section class="hero-area">
       <div class="content-wrapper">
 
-        <img src="./img/retreat.jpg" alt="Lady standing on a bridge">
+       <!-- <img src="./img/retreat.jpg" alt="Lady standing on a bridge">-->
 
         <h1>Retreat from the desk, return refreshed.
         </h1>
@@ -129,7 +130,7 @@
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
-        <img src="./img/retreat-lacrue.jpg" alt="Happy group of ladies">
+        <!--<img src="./img/retreat-lacrue.jpg" alt="Happy group of ladies">-->
         <article>
           <div>
             <h3>LaCrue Bottling Co. <br>October 2018</h3>
@@ -161,17 +162,16 @@
         <h4>Social</h4>
       </div>
       <div class="social-icons">
-        <p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
+        <!--<p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
         <p><a href="https://x.com/" target="_blank">X</a></p>
-        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>
+        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>-->
 
+      </div>
       </div>
       <div class="copyright">
         <p>Copyright 2025 | Unplugged</p>
 
       </div>
-
-    </div>
 
   </footer>
 
