Added color styles

--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,10 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <!--GOOGLE Fonts-->
+
+
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
