Images and background to mobile and table

--- a/faq/index.html
+++ b/faq/index.html
@@ -32,8 +32,9 @@
 
   <header>
     <div class="content-wrapper">
-      <p>logo</p>
-      <!--<img src="../img/logo.png" alt="unplugged logo">-->
+      <figure>
+        <a href> <img src="../img/logo.png" alt="unplugged logo"></a>
+      </figure>
 
       <div class="header-divider">
 
