--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
   <header>
     <div class="content-wrapper">
-    
-      <p>logo</p>
-       <!--img src="./img/logo.png" alt="unplugged logo">-->
-      
+      <figure>
+        <a href> <img src="./img/logo.png" alt="unplugged logo"></a>
+      </figure>
+
       <div class="header-divider">
 
       </div>
@@ -56,8 +56,6 @@
 
     <section class="hero-area">
       <div class="content-wrapper">
-
-       <!-- <img src="./img/retreat.jpg" alt="Lady standing on a bridge">-->
 
         <h1>Retreat from the desk, return refreshed.
         </h1>
@@ -133,9 +131,13 @@
     </section>
 
     <section class="reviews">
+
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like this one.</h2>
-        <!--<img src="./img/retreat-lacrue.jpg" alt="Happy group of ladies">-->
+        <h2>Be a better team in 5 days, like this one.
+        </h2>
+        <figure>
+          <img src="./img/retreat-lacrue.jpg" alt="Happy group of ladies">
+        </figure>
         <article>
           <div>
             <h3>LaCrue Bottling Co. <br>October 2018</h3>
