Added responsive map

--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href> <img src="../img/logo.png" alt="unplugged logo"></a>
+        <img src="../img/logo.png" alt="unplugged logo">
       </figure>
 
       <div class="header-divider">
@@ -73,12 +73,9 @@
   </section>
 
   <section class="map">
-    <div class="content-wrapper">
       <figure>
-
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.9724775356967!2d-82.21565342440842!3d35.67767967258844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8850ab85daa27035%3A0xe8a7819f0d56a2e6!2sIndigo%20Nature%20Retreat!5e0!3m2!1sen!2sus!4v1745771091687!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </figure>
-
-    </div>
   </section>
   <section class="contact-section">
 
