--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href> <img src="./img/logo.png" alt="unplugged logo"></a>
+        <img src="./img/logo.png" alt="unplugged logo">
       </figure>
 
       <div class="header-divider">
