--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,13 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-
-  <!--GOOGLE Fonts-->
+  <!--google fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  
+  <!-- Font Awesome-->
+  <script src="https://kit.fontawesome.com/9e71d38345.js" crossorigin="anonymous"></script>
 
 
 
@@ -118,17 +123,18 @@
           </address>
 
         </div>
-      </div>
+      
       <div class="social">
         <h4>Social</h4>
-      </div>
+      
       <div class="social-icons">
-        <!--<p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
-        <p><a href="https://x.com/" target="_blank">X</a></p>
-        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>-->
-
+        <p><a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a></p>
+        <p><a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a></p>
+        <p><a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
       </div>
       </div>
+      </div>
+    </div>
       <div class="copyright">
         <p>Copyright 2025 | Unplugged</p>
 
