--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+  <!--font awesome-->
+  <script src="https://kit.fontawesome.com/9e71d38345.js" crossorigin="anonymous"></script>
+  
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -86,34 +88,44 @@
         </h2>
         <div class="features-items">
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fa-solid fa-campground"></i>
+            </p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
 
             </p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fa-solid fa-bed"></i>
+            </p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout rooms.
 
             </p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fa-solid fa-utensils"></i>
+            </p>
             <p class="features-item-description">Private chef team providing on demand meals - just like your team
               kitchen.
 
             </p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fa-solid fa-shoe-prints"></i>
+            </p>
             <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
               bungalow.
 
             </p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fa-solid fa-face-smile"></i>
+            </p>
             <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
               a
               chance to reset.
@@ -121,7 +133,9 @@
             </p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon">
+              <i class="fa-solid fa-wifi"></i>
+            </p>
             <p class="features-item-description">Dedicated computer room for times that you must wifi.
 
             </p>
@@ -164,17 +178,18 @@
           </address>
 
         </div>
-      </div>
+      
       <div class="social">
         <h4>Social</h4>
-      </div>
+      
       <div class="social-icons">
-        <!--<p><a href="https://facebook.com/" target="_blank">Facebook</a></p>
-        <p><a href="https://x.com/" target="_blank">X</a></p>
-        <p><a href="https://instagram.com/" target="_blank">Instagram</a></p>-->
-
+        <p><a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a></p>
+        <p><a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a></p>
+        <p><a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a></p>
       </div>
       </div>
+      </div>
+    </div>
       <div class="copyright">
         <p>Copyright 2025 | Unplugged</p>
 
