Turn unplugged img into a clickable link

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,9 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <img src="../img/logo.png" alt="unplugged logo">
+        <a href="../index.html">
+          <img src="../img/logo.png" alt="unplugged logo">
+        </a>
       </figure>
 
       <div class="header-divider">
@@ -63,14 +65,10 @@
       </h2>
       <div class="mission-content">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-          facilisis.
+        <p>Through intentional challenges, outdoor collaboration, and space to reflect together, we create the kind of environment where teams grow beyond titles and roles. Our goal isn’t just to bring you closer—it’s to help you become a team that communicates better, solves problems faster, and genuinely enjoys working together. The kind of team you’re proud to be a part of.
 
         </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-          facilisis.
+        <p>We want to make you the team you’ve always wanted to be—connected, confident, and ready for anything. At the core of our mission is a belief that great teams aren’t just built through work—they're shaped through trust, shared experience, and meaningful communication. We design every part of our team-building retreats to help you strengthen those foundations, whether you’re just forming or looking to level up.
 
         </p>
       </div>
