--- a/index.html
+++ b/index.html
@@ -155,11 +155,7 @@
         <article>
           <div>
             <h3>LaCrue Bottling Co. <br>October 2018</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat
-              nulla pariatur.</p>
+            <p>The recent team building retreat was a refreshing and productive break from our usual work environment. Set in a beautiful, nature-filled location, it provided the perfect backdrop for strengthening team dynamics, improving communication, and recharging motivation.</p>
           </div>
         </article>
       </div>
