--- a/faq/index.html
+++ b/faq/index.html
@@ -35,7 +35,9 @@
   <header>
     <div class="content-wrapper">
       <figure>
+        <a href="../index.html">
         <img src="../img/logo.png" alt="unplugged logo">
+        </a>
       </figure>
 
       <div class="header-divider">
@@ -64,29 +66,25 @@
         <div class="faq-content">
           <h4>How do I get to the Unplugged retreat?
           </h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          <p>Our address and map with directions is located in the about page.
           </p>
         </div>
         <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?
           </h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          <p>A team building outdoor retreat is most effective when the participating team is ready to engage in open communication, shared challenges, and trust-building in a more relaxed, natural setting. 
           </p>
         </div>
         <div class="faq-content">
           <h4>What size teams can you accommodate?
           </h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          <p>We can accomodate 24 people comfortably.
           </p>
         </div>
         <div class="faq-content">
           <h4>Is there really no wifi available?
           </h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          <p>Yes! Without constant digital distractions, team members can be fully present—mentally and emotionally. This leads to deeper conversations, stronger connections, and more meaningful interactions that wouldn't happen in a tech-connected environment.
           </p>
         </div>
       </div>
